# -*- coding: utf-8 -*-
[metadata]
name = beancount-degiro
version = 0.0.1
author = Tibor Szabó
author_email = szabootibor@gmail.com
description = Degiro trading account importer for Beancount
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/szabootibor/beancount-degiro
project_urls =
    Bug Tracker = https://gitlab.com/szabootibor/beancount-degiro/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPLv3
    Operating System :: OS Independent

[options]
package_dir=
    =src

packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
